--- a/web/templates/recordings.html
+++ b/web/templates/recordings.html
@@ -7,14 +7,20 @@
 <h1 class="page-header">Recordings</h1>
 {% block watch_body %}{% endblock %}
 <h2 class="sub-header">Latest</h2>
-<div class="table-responsive">
-    <table class="table table-striped">
-    {% for recording in recordings %}
-        <tr>
-        <td><a href="{% url 'home.views.watch' file_name=recording.name %}">{{ recording.time|date:"D d M Y H:i" }}</a></td>
-        <td>{% block watch_select %}{% endblock %}</td>
-        </tr>
-    {% endfor %}
-    </table>
+
+{% for recording in recordings %}
+<div class="row">
+  <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <a href="{% url 'home.views.watch' file_name=recording.name %}">
+        <img src="{% static recording.photo.thumbnail %}" class="img-responsive">
+      </a>
+      <div class="caption">
+        <h3>{{ recording.time|date:"D d M Y H:i" }}</h3>
+        <p>{% block watch_select %}{% endblock %}</p>
+      </div>
+    </div>
+  </div>
 </div>
+{% endfor %}
 {% endblock %}
