--- a/web/templates/recordings.html
+++ b/web/templates/recordings.html
@@ -5,22 +5,31 @@
 
 {% block body %}
 <h1 class="page-header">Recordings</h1>
-{% block watch_body %}{% endblock %}
-<h2 class="sub-header">Latest</h2>
+<div class="embed-responsive embed-responsive-16by9">
+  <video class="embed-responsive-item" controls>
+    {% if not recording %}
+      {% with recordings|first as recording %}
+        <source src="{% static recording.name %}" type="video/mp4">
+      {% endwith %}
+    {% else %}
+      <source src="{% static recording %}" type="video/mp4">
+    {% endif %}
+    <span class="label label-danger">Your browser does not support the video.</span>
+  </video>
+</div>
 
-{% for recording in recordings %}
+<h2 class="sub-header">Latest</h2>
 <div class="row">
+{% for recording in recordings %}
   <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <a href="{% url 'home.views.watch' file_name=recording.name %}">
-        <img src="{% static recording.photo.thumbnail %}" class="img-responsive">
-      </a>
+      <a href="{% url 'home.views.recordings' recording.name %}"><img src="{% static recording.photo.name %}"></a>
       <div class="caption">
-        <h3>{{ recording.time|date:"D d M Y H:i" }}</h3>
-        <p>{% block watch_select %}{% endblock %}</p>
+        <h3>{{ recording.time|date:"l d M Y H:i" }}</h3>
+        <p>Length: {{ recording.lenght }} s</p>
       </div>
     </div>
   </div>
-</div>
 {% endfor %}
+</div>
 {% endblock %}
