Change to web page theme, new nav.

--- a/web/templates/home.html
+++ b/web/templates/home.html
@@ -6,8 +6,8 @@
 {% block body %}
 <h1 class="page-header">Home</h1>
 <div class="jumbotron">
-  <h1>Raspberry Pi Web camera</h1>
-  <p>Live stream, motion detection, recordings.</p>
-  <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+  <h1><img src="{% static 'img/logo_128.png' %}"> Raspberry Pi Web camera</h1>
+  <p align="center">Live stream, motion detection, recordings.</p>
+  <p align="center"><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
 </div>
 {% endblock %}
