--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -3,11 +3,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <style>
-      html {
-        overflow-y: scroll; /* Fix for flickering menu bar */
-      }
-    </style>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -17,43 +12,49 @@
 
     <title>Raspberry Pi Web camera</title>
 
-    <!-- Bootstrap core CSS -->
     <link href="{% static 'bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
-    <link href="{% static 'bootstrap/css/justified-nav.css' %}" rel="stylesheet">
+    <link href="{% static 'css/webcam.css' %}" rel="stylesheet">
 
-    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
     <script src="{% static 'bootstrap/js/ie-emulation-modes-warning.js' %}"></script>
     <script src="{% static 'js/jquery-1.11.2.min.js' %}"></script>
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
   </head>
 
   <body>
-    <div class="container">
-      <div class="masthead">
-        <h3 class="text-muted">Raspberry Pi Web camera</h3>
-        <nav>
-          <ul class="nav nav-justified">
+  <div class="container">
+    <nav class="navbar navbar-inverse">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-2">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="{% url 'home.views.home' %}">Raspberry Pi Web camera</a>
+        </div>
+
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
+          <ul class="nav navbar-nav">
             <li class="{% block Home %}{% endblock %}"><a href="{% url 'home.views.home' %}">Home</a></li>
             <li class="{% block Stream %}{% endblock %}"><a href="{% url 'home.views.stream' %}">Live</a></li>
             <li class="{% block Recordings %}{% endblock %}"><a href="{% url 'home.views.recordings' %}">Recordings</a></li>
             <li class="{% block Movements %}{% endblock %}"><a href="{% url 'home.views.movements' %}">Movements</a></li>
             <li class="{% block Configuration %}{% endblock %}"><a href="{% url 'home.views.get_config' %}">Configuration</a></li>
-            <li><a href="#">About</a></li>
-          </ul>
-        </nav>
+            <li class="{% block Help %}{% endblock %}"><a href="#">Help</a></li>
+           </ul>
+           <ul class="nav navbar-nav navbar-right">
+            <li class="{% block About %}{% endblock %}"><a href="#">About</a></li>
+           </ul>
+        </div>
       </div>
+    </nav>
       {% block body %}{% endblock %}
-      <!-- Site footer -->
-      <footer class="footer">
-        <p>&copy; DN 2015</p>
-      </footer>
-
+    <footer class="footer">
+      <p>&copy; DN 2015</p>
+    </footer>
     </div> <!-- /container -->
     <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
   </body>
