Changing logo, recordings page and movements page

--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Raspberry Pi Web camera</title>
+    <title>Raspberry Pi Web Camera</title>
 
     <link href="{% static 'bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'css/webcam.css' %}" rel="stylesheet">
@@ -33,7 +33,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="{% url 'home.views.home' %}">Raspberry Pi Web camera</a>
+          <a class="navbar-brand" href="{% url 'home.views.home' %}">Raspberry Pi Web Camera</a>
         </div>
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
