--- a/web/templates/movements.html
+++ b/web/templates/movements.html
@@ -1,20 +1,40 @@
 {% extends "base.html" %}
 {% load staticfiles %}
+{% load humanize %}
 
 {% block Movements %}active{% endblock %}
 
 {% block body %}
 <h1 class="page-header">Movements</h1>
 <div class="row">
-{% for movement in movements %}
-  <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img src="{% static movement.photo.name %}">
-      <div class="caption">
-        <h3>{{ movement.time|date:"l d M Y H:i" }}</h3>
-      </div>
-    </div>
+<div class="col-md-2"></div>
+<div class="col-md-8">
+<table class="table table-striped table-hover">
+  {% for movement in movements %}
+  <tr>
+    <td>{{ forloop.counter }}</td>
+    <td>{{ movement.time|date:"l jS M Y H:i" }}</td>
+    <td>{{ movement.time|naturaltime }}</td>
+
+    <td>
+      {% if movement.photo.name != "nophoto" %}
+      <span class="glyphicon glyphicon-picture" aria-hidden="true"></span>
+      {% endif %}
+    </td>
+
+    <td>
+      {% if movement.recording.name != "norecording" %}
+      <a href="{% url 'home.views.recordings' movement.recording.name %}">
+        <span class="glyphicon glyphicon-facetime-video" aria-hidden="true"></span>
+      </a>
+      {% endif %}
+    </td>
+
+  </tr>
+  {% endfor %}
+</table>
+
   </div>
-{% endfor %}
+  <div class="col-md-2"></div>
 </div>
 {% endblock %}
