--- a/web/templates/movements.html
+++ b/web/templates/movements.html
@@ -7,34 +7,40 @@
 {% block body %}
 <h1 class="page-header">Movements</h1>
 <div class="row">
-<div class="col-md-2"></div>
-<div class="col-md-8">
-<table class="table table-striped table-hover">
-  {% for movement in movements %}
-  <tr>
-    <td>{{ forloop.counter }}</td>
-    <td>{{ movement.time|date:"l jS M Y H:i" }}</td>
-    <td>{{ movement.time|naturaltime }}</td>
-
-    <td>
-      {% if movement.photo.name != "nophoto" %}
-      <span class="glyphicon glyphicon-picture" aria-hidden="true"></span>
-      {% endif %}
-    </td>
-
-    <td>
-      {% if movement.recording.name != "norecording" %}
-      <a href="{% url 'home.views.recordings' movement.recording.name %}">
-        <span class="glyphicon glyphicon-facetime-video" aria-hidden="true"></span>
-      </a>
-      {% endif %}
-    </td>
-
-  </tr>
-  {% endfor %}
-</table>
-
+  <div class="col-md-12 text-center">
+  {% include 'pagination.html' %}
   </div>
-  <div class="col-md-2"></div>
+<div>
+<div class="row">
+  <div class="col-md-8 col-md-offset-2">
+    <table class="table table-striped table-hover">
+    {% for movement in movements %}
+      <tr>
+        <td>{{ movement.time|date:"l jS M Y H:i" }}</td>
+        <td>{{ movement.time|naturaltime }}</td>
+
+        <td>
+          {% if movement.photo.name != "nophoto" %}
+          <span class="glyphicon glyphicon-picture" aria-hidden="true"></span>
+          {% endif %}
+        </td>
+
+        <td>
+          {% if movement.recording.name != "norecording" %}
+          <a href="{% url 'home.views.recordings' movement.recording.name %}">
+            <span class="glyphicon glyphicon-facetime-video" aria-hidden="true"></span>
+          </a>
+          {% endif %}
+        </td>
+
+      </tr>
+    {% endfor %}
+    </table>
+  </div>
 </div>
+<div class="row">
+  <div class="col-md-12 text-center">
+  {% include 'pagination.html' %}
+  </div>
+<div>
 {% endblock %}
