Changing base template

--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -21,6 +21,7 @@
 
   <body>
   <div class="container">
+    <img src="{% static 'img/logo_128.png' %}">
     <nav class="navbar navbar-inverse">
       <div class="container-fluid">
         <div class="navbar-header">
