--- a/web/templates/movements.html
+++ b/web/templates/movements.html
@@ -8,7 +8,7 @@
 <h1 class="page-header">Movements</h1>
 <div class="row">
   <div class="col-md-12 text-center">
-  {% include 'pagination.html' %}
+  {% include 'pagination_movements.html' %}
   </div>
 <div>
 <div class="row">
@@ -21,7 +21,9 @@
 
         <td>
           {% if movement.photo.name != "nophoto" %}
-          <span class="glyphicon glyphicon-picture" aria-hidden="true"></span>
+          <a href="{% url 'home.views.photos' photo=movement.photo.name %}">
+            <span class="glyphicon glyphicon-picture" aria-hidden="true"></span>
+          </a>
           {% endif %}
         </td>
 
@@ -40,7 +42,7 @@
 </div>
 <div class="row">
   <div class="col-md-12 text-center">
-  {% include 'pagination.html' %}
+  {% include 'pagination_movements.html' %}
   </div>
 <div>
 {% endblock %}
