--- a/web/templates/pagination_movements.html
+++ b/web/templates/pagination_movements.html
@@ -1,3 +1,5 @@
+
+{% if movements.has_other_pages %}
 <nav>
   <ul class="pagination pagination-lg">
     <li>
@@ -16,3 +18,4 @@
     </li>
   </ul>
 </nav>
+{% endif %}
