--- a/web/templates/pagination_photos.html
+++ b/web/templates/pagination_photos.html
@@ -1,3 +1,4 @@
+{% if photos.has_other_pages %}
 <nav>
   <ul class="pagination pagination-lg">
     <li>
@@ -16,3 +17,4 @@
     </li>
   </ul>
 </nav>
+{% endif %}
