Adding 'about' page

--- a/web/templates/home.html
+++ b/web/templates/home.html
@@ -15,7 +15,7 @@
   </div>
   <div class="row">
     <div class="col-md-4"></div>
-    <div class="col-md-4"><p align="center"><a class="btn btn-primary btn-lg" href="{% url 'home.views.help' %}" role="button">Learn more</a></p></div>
+    <div class="col-md-4"><p align="center"><a class="btn btn-primary btn-lg" href="{% url 'home.views.about' %}" role="button">Learn more</a></p></div>
     <div class="col-md-4"><p align="right"><img src="{% static 'img/logo_256.png' %}"></p></div>
   </div>
 </div>
