--- a/web/templates/about.html
+++ b/web/templates/about.html
@@ -5,5 +5,35 @@
 
 {% block body %}
 <h1 class="page-header">About</h1>
-<p class="lead">Nothing to see here... Keep clicking...</p>
+<p class="lead">
+Raspberry Pi Web Camera runs on Rasberry PI 2 <a href="http://www.raspberrypi.org/">Rasberry PI 2</a>
+and uses <a href="http://www.raspberrypi.org/help/camera-module-setup/">Raspberry PI camera</a>.
+</p>
+<div class="row">
+  <div class="col-md-4">
+    <ul class="list-group">
+      <li class="list-group-item active">
+        Third party libraries
+      </li>
+      <li class="list-group-item">
+        <a href="https://www.python.org/">Python</a>
+      </li>
+      <li class="list-group-item">
+        <a href="http://picamera.readthedocs.org/">Picamera</a>
+      </li>
+      <li class="list-group-item">
+        <a href="http://www.numpy.org/">NumPy</a>
+      </li>
+      <li class="list-group-item">
+        <a href="https://www.djangoproject.com/">Django</a>
+      </li>
+      <li class="list-group-item">
+        <a href="http://gevent.org/">Gevent</a>
+      </li>
+      <li class="list-group-item">
+        <a href="https://bootswatch.com/simplex/">Simplex</a>
+      </li>
+    </ul>
+  </div>
+</div>
 {% endblock %}
