--- a/web/templates/stream.html
+++ b/web/templates/stream.html
@@ -6,7 +6,7 @@
 {% block body %}
 <h1 class="page-header">Stream Live</span></h1>
 <div class="embed-responsive embed-responsive-16by9">
-  <img id="stream" onload="stream_data()" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAFCAYAAACNbyblAAAAHElEQVQI12P4//8/w38GIAXDIBKE0DHxgljNBAAO9TXL0Y4OHwAAAABJRU5ErkJggg==">
+  <img class="embed-responsive-item" id="stream" onload="stream_data()" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAFCAYAAACNbyblAAAAHElEQVQI12P4//8/w38GIAXDIBKE0DHxgljNBAAO9TXL0Y4OHwAAAABJRU5ErkJggg==">
 </div>
 
 <script>
