--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -44,7 +44,7 @@
             <li class="{% block Photos %}{% endblock %}"><a href="{% url 'home.views.photos' %}">Photos</a></li>
             <li class="{% block Recordings %}{% endblock %}"><a href="{% url 'home.views.recordings' %}">Recordings</a></li>
             <li class="{% block Movements %}{% endblock %}"><a href="{% url 'home.views.movements' %}">Movements</a></li>
-            <li class="{% block Configuration %}{% endblock %}"><a href="{% url 'home.views.get_config' %}">Configuration</a></li>
+            <li class="{% block Configuration %}{% endblock %}"><a href="{% url 'home.views.configuration' %}">Configuration</a></li>
            </ul>
            <ul class="nav navbar-nav navbar-right">
             <li class="{% block About %}{% endblock %}"><a href="{% url 'home.views.about' %}">About</a></li>
