--- a/web/templates/configuration.html
+++ b/web/templates/configuration.html
@@ -5,15 +5,7 @@
 
 {% block body %}
 <h1 class="page-header">Configuration</h1>
-<form action="{% static 'home.views.set_config' %}" method="get">
-<table>
-<tr><th>Video Width</th><td align="left"><input type="text" value="{{ config.width }}" class="form-control" placeholder="800"></td></tr>
-<tr><th>Video Height</th><td align="left"><input type="text" value="{{ config.height }}" class="form-control" placeholder="600"></td></tr>
-<tr><th>Horizontal flip</th><td align="left"><input type="checkbox" class="form-control" {% if config.hflip %}checked{% endif %}></td></tr>
-</table>
-
-<input class="btn btn-default" type="submit" value="Submit">
-</form>
+<p class="lead">... to do ...</p>
 
 <h1 class="page-header">Control Center</h1>
 <button onclick="window.location.href='{% url 'home.views.restart_app' %}'" type="button" class="btn btn-primary" aria-expanded="false">Restart Web Camera</button>
