--- a/web/templates/photos.html
+++ b/web/templates/photos.html
@@ -16,31 +16,35 @@
 
 {% if photos|length != 0 %}
 <hr>
+
 <div class="row">
   <div class="col-md-12 text-center">
   {% include 'pagination_photos.html' %}
   </div>
 <div>
+
 <div class="row">
 {% for ph in photos %}
-  <div class="col-sm-6 col-md-4">
+  <div class="col-sm-6 col-md-3">
     {% if ph.name == photo %}<div class="panel panel-success">{% else %}<div class="panel panel-primary">{% endif %}
       <div class="panel-heading">
         <h3 class="panel-title">{{ ph.time|date:"l jS M Y H:i" }}<span class="glyphicon glyphicon-picture pull-right" aria-hidden="true"></span></h3>
       </div>
       <div class="panel-body">
         <div class="thumbnail">
-          <a href="{% url 'home.views.photos' page=photos.number photo=ph.name %}"><img src="{% static ph.name %}"></a>
+          <a href="{% url 'home.views.photos' page=photos.number photo=ph.name %}"><img src="{% static ph.thumbnail %}"></a>
         </div>
       </div>
     </div> <!-- panel -->
   </div>
 {% endfor %}
 </div> <!-- row -->
+
 <div class="row">
   <div class="col-md-12 text-center">
   {% include 'pagination_photos.html' %}
   </div>
 <div>
+
 {% endif %}
 {% endblock %}
