--- a/web/templates/recordings.html
+++ b/web/templates/recordings.html
@@ -18,16 +18,23 @@
 
 {% if recordings|length != 0 %}
 <hr>
+
+<div class="row">
+  <div class="col-md-12 text-center">
+  {% include 'pagination_recordings.html' %}
+  </div>
+<div>
+
 <div class="row">
 {% for rec in recordings %}
-  <div class="col-sm-6 col-md-4">
+  <div class="col-sm-6 col-md-3">
     {% if rec.name == recording %}<div class="panel panel-success">{% else %}<div class="panel panel-primary">{% endif %}
       <div class="panel-heading">
         <h3 class="panel-title">{{ rec.time|date:"l jS M Y H:i" }}<span class="glyphicon glyphicon-facetime-video pull-right" aria-hidden="true"></span></h3>
       </div>
       <div class="panel-body">
         <div class="thumbnail">
-          <a href="{% url 'home.views.recordings' rec.name %}"><img src="{% static rec.photo.name %}"></a>
+          <a href="{% url 'home.views.recordings' rec.name %}"><img src="{% static rec.photo.thumbnail %}"></a>
         </div>
         <p align="right">{{ rec.lenght }} seconds</p>
       </div>
@@ -35,5 +42,12 @@
   </div>
 {% endfor %}
 </div> <!-- row -->
+
+<div class="row">
+  <div class="col-md-12 text-center">
+  {% include 'pagination_recordings.html' %}
+  </div>
+<div>
+
 {% endif %}
 {% endblock %}
