Better pid managment in webcam.sh. Change to date display on web pages. Change to motion params.

--- a/web/templates/about.html
+++ b/web/templates/about.html
@@ -33,6 +33,9 @@ and uses <a href="http://www.raspberrypi.org/help/camera-module-setup/">Raspberr
       <li class="list-group-item">
         <a href="https://bootswatch.com/simplex/">Simplex</a>
       </li>
+      <li class="list-group-item">
+        <a href="http://www.pythonware.com/products/pil/">PIL</a>
+      </li>
     </ul>
   </div>
 </div>
