--- a/web/templates/recordings.html
+++ b/web/templates/recordings.html
@@ -30,7 +30,7 @@
   <div class="col-sm-6 col-md-3">
     {% if rec.name == recording %}<div class="panel panel-success">{% else %}<div class="panel panel-primary">{% endif %}
       <div class="panel-heading">
-        <h3 class="panel-title">{{ rec.time|date:"l jS M Y H:i" }}<span class="glyphicon glyphicon-facetime-video pull-right" aria-hidden="true"></span></h3>
+        <h3 class="panel-title">{{ rec.time|date:"D jS M Y H:i" }}<span class="glyphicon glyphicon-facetime-video pull-right" aria-hidden="true"></span></h3>
       </div>
       <div class="panel-body">
         <div class="thumbnail">
