--- a/web/templates/movements.html
+++ b/web/templates/movements.html
@@ -1,53 +1,43 @@
 {% extends "base.html" %}
 {% load staticfiles %}
-{% load humanize %}
 
 {% block Movements %}active{% endblock %}
 
 {% block body %}
 <h1 class="page-header">Movements</h1>
-
 {% if movements|length != 0 %}
+
 <div class="row">
   <div class="col-md-12 text-center">
   {% include 'pagination_movements.html' %}
   </div>
 <div>
+
 <div class="row">
-  <div class="col-md-8 col-md-offset-2">
-    <table class="table table-striped table-hover">
-    {% for movement in movements %}
-      <tr>
-        <td>{{ movement.time|date:"l jS M Y H:i" }}</td>
-        <td>{{ movement.time|naturaltime }}</td>
+{% for movement in movements %}
+  <div class="col-sm-6 col-md-3">
+    <div class="panel panel-primary">
+      <div class="panel-heading">
+        <h3 class="panel-title">
+          {{ movement.time|date:"D jS M Y H:i" }}
+          <span class="glyphicon glyphicon-facetime-video pull-right" aria-hidden="true"></span>
+        </h3>
+      </div>
+      <div class="panel-body">
+        <div class="thumbnail">
+          <a href="{% url 'home.views.movement_details' movement.id %}"><img src="{% static movement.photo.thumbnail %}"></a>
+        </div>
+      </div>
+    </div> <!-- panel -->
+  </div>
+{% endfor %}
+</div> <!-- row -->
 
-        <td>
-          {% if movement.photo.name != "nophoto" %}
-          <a href="{% url 'home.views.photos' photo=movement.photo.name %}">
-            <span class="glyphicon glyphicon-picture" aria-hidden="true"></span>
-          </a>
-          {% endif %}
-        </td>
-
-        <td>
-          {% if movement.recording.name != "norecording" %}
-          <a href="{% url 'home.views.recordings' movement.recording.name %}">
-            <span class="glyphicon glyphicon-facetime-video" aria-hidden="true"></span>
-          </a>
-          {% endif %}
-        </td>
-
-      </tr>
-    {% endfor %}
-    </table>
+<div class="row">
+  <div class="col-md-12 text-center">
+  {% include 'pagination_movements.html' %}
   </div>
 </div>
-<div class="row">
-  <div class="col-md-12 text-center">
-  {% include 'pagination_movements.html' %}
-  </div>
-<div>
-{% else %}
-<p class="lead">No movements in database!</p>
+
 {% endif %}
 {% endblock %}
