--- a/web/templates/movement_details.html
+++ b/web/templates/movement_details.html
@@ -7,19 +7,22 @@
 <h1 class="page-header">Movement</h1>
 
 <div class="well">
-    {{ movement.time|date:"D jS M Y H:i" }} ({{ movement.time|timesince }} ago)<br>
+    {{ movement.time|date:"D jS M Y H:i" }} ({{ movement.time|timesince }} ago)
+    <hr>
+    <div class="embed-responsive embed-responsive-16by9">
+      <img class="embed-responsive-item" src="{% static movement.photo.name %}"/>
+    </div>
+</div>
+
+<div class="well">
     Recorded for {{ movement.recording.lenght }} seconds
-</div>
-
-<div class="embed-responsive embed-responsive-16by9">
-  <img class="embed-responsive-item" src="{% static movement.photo.name %}">
-</div>
-
-<div class="embed-responsive embed-responsive-16by9">
-  <video class="embed-responsive-item" controls>
-    <source src="{% static movement.recording.name %}" type="video/mp4">
-    <span class="label label-danger">Your browser does not support the video.</span>
-  </video>
+    <hr>
+    <div class="embed-responsive embed-responsive-16by9">
+      <video class="embed-responsive-item" controls>
+        <source src="{% static movement.recording.name %}" type="video/mp4">
+        <span class="label label-danger">Your browser does not support the video.</span>
+      </video>
+    </div>
 </div>
 
 {% endblock %}
