Adding refresh to Live stream. Video clean up for recordings.

--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
+    {% block meta %}{% endblock %}
     <link rel="icon" href="../../favicon.ico">
 
     <title>Raspberry Pi Web Camera</title>
