--- a/web/templates/stream.html
+++ b/web/templates/stream.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% load staticfiles %}
 
+{% block meta %}<meta http-equiv="refresh" content="300">{% endblock %}
+
 {% block Stream %}active{% endblock %}
 
 {% block body %}
